--- a/exercism/AnnalynsInfiltration/infiltration.tests.csproj
+++ b/exercism/AnnalynsInfiltration/infiltration.tests.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\infiltration\infiltration.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
